@@ -13,7 +13,8 @@ common_content_pull: false
 ## OpenShift Connected Install Variables
 common_openshift_interface: eno1
 common_cluster_domain: example.com
-commond_connected_cluster: true
+commond_connected_cluster: false
+common_openshift_cluster_install_dir: "{{ common_install_dir }}/install-{{ ansible_date_time.date }}"
 
 ## Openshift Disconnected Install Variables
 common_openshift_release: 4.14.16
