@@ -1,5 +1,4 @@
 # Defaults main.yml for common role
-common_openshift_cluster_install_dir: "{{ common_install_dir }}/install-{{ ansible_date_time.date }}"
 common_openshift_oc_mirror_dir: "{{ common_openshift_dir }}/images"
 common_openshift_client_bin: "{{ common_openshift_dir }}/bin"
 common_git_repos_dir: "{{ common_openshift_download_dir }}/git"
