@@ -5,9 +5,11 @@ All notable changes to this project will be documented in this file.
 ## [1.0.2RC3]
 ### Added
 - retires for inital helm install, incase api isnt reachable
+- default for debug in day2 role
 
 ### Changed
 - until statement for argo app deployments
+- location of common_openshift_cluster_install_dir
 
 ### Fixed
 - references to old repo
